--- a/uaspuan/index.html
+++ b/uaspuan/index.html
@@ -779,7 +779,7 @@
                                     <p>UNIVERSITAS NEGERI SURABAYA</p>
                                 </div>
                                 <div class="parking-map" style="background: white; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 1rem; text-align: center;">
-                                    <img src="c:\Users\Lenovo\Downloads\feb unesa.jpg" alt="Denah Parkir FEB" style="width: 100%; height: 100%; object-fit: cover;">
+                                    <img src="denah_feb.png" alt="Denah Parkir FEB" style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </div>
                             <div class="faculty-info">
@@ -802,7 +802,7 @@
                                     <p>UNIVERSITAS NEGERI SURABAYA</p>
                                 </div>
                                 <div class="parking-map" style="background: white; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 1rem; text-align: center;">
-                                    <img src="c:\Users\Lenovo\Downloads\fisipol unesa.png" alt="Denah Parkir FISIPOL" style="width: 100%; height: 100%; object-fit: cover;">
+                                    <img src="denah_fisip.png" alt="Denah Parkir FISIPOL" style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </div>
                             <div class="faculty-info">
@@ -1065,14 +1065,14 @@ Terima kasih,
                 modalCaption.textContent = 'Denah Parkir FEB - Fakultas Ekonomika dan Bisnis';
                 modalImage.innerHTML = `
                     <div style="padding: 1rem; background: white; display: flex; justify-content: center; align-items: center;">
-                        <img src="c:\\Users\\Lenovo\\Downloads\\denah parkir feb.png" alt="Denah Parkir FEB" style="max-width: 100%; max-height: 70vh; object-fit: contain;">
+                        <img src="denah_feb.png" alt="Denah Parkir FEB" style="max-width: 100%; max-height: 70vh; object-fit: contain;">
                     </div>
                 `;
             } else if (faculty === 'fisipol') {
                 modalCaption.textContent = 'Denah Parkir FISIPOL - Fakultas Ilmu Sosial dan Politik';
                 modalImage.innerHTML = `
                     <div style="padding: 1rem; background: white; display: flex; justify-content: center; align-items: center;">
-                        <img src="c:\\Users\\Lenovo\\Downloads\\denah parkir fisipol.png" alt="Denah Parkir FISIPOL" style="max-width: 100%; max-height: 70vh; object-fit: contain;">
+                        <img src="denah_fisip.png" alt="Denah Parkir FISIPOL" style="max-width: 100%; max-height: 70vh; object-fit: contain;">
                     </div>
                 `;
             }
@@ -1102,4 +1102,5 @@ Terima kasih,
         });
     </script>
 </body>
+
 </html>
