--- a/uaspuan/index.html
+++ b/uaspuan/index.html
@@ -779,7 +779,7 @@
                                     <p>UNIVERSITAS NEGERI SURABAYA</p>
                                 </div>
                                 <div class="parking-map" style="background: white; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 1rem; text-align: center;">
-                                    <img src="denah_feb.png" alt="Denah Parkir FEB" style="width: 100%; height: 100%; object-fit: cover;">
+                                    <img src="fak_feb.png" alt="Denah Parkir FEB" style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </div>
                             <div class="faculty-info">
@@ -802,7 +802,7 @@
                                     <p>UNIVERSITAS NEGERI SURABAYA</p>
                                 </div>
                                 <div class="parking-map" style="background: white; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 1rem; text-align: center;">
-                                    <img src="denah_fisip.png" alt="Denah Parkir FISIPOL" style="width: 100%; height: 100%; object-fit: cover;">
+                                    <img src="fak_fisip.png" alt="Denah Parkir FISIPOL" style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </div>
                             <div class="faculty-info">
@@ -1104,3 +1104,4 @@ Terima kasih,
 </body>
 
 </html>
+
